# slide_autoencoder

./: .gitignore  CHANGELOG.md  Makefile  README.md  activate.sh  pyproject.toml  quick_start_dataset.sh  requirements.txt  setup.py  setup_datasets.sh  setup_environment.sh
configs/: config.py
docs/: PUBLIC_DATASETS.md  REAL_DATA_TRAINING_STEPS.md  SOLUTION_SUMMARY.md  TRAINING_CHECKLIST.md  TRAINING_GUIDE.md  index.md
scripts/: debug_model.py  demo.py  download_datasets.py  quick_start_real_data.py
src/: __init__.py
src/evaluation/: evaluate_model.py
src/slide_autoencoder/: __init__.py  data_utils.py  inference.py  models.py
src/training/: prepare_data.py  train.py  train_real_data.py
src/visualization/: demo_visualization.py  model_summary.py  model_visualization.py  model_visualization_report.txt
tests/: __init__.py  overview.py
